Compass-188: Double scroll bars on index view fix; scrollbar on hostname fix; (#560)

--- a/src/app/home/index.less
+++ b/src/app/home/index.less
@@ -89,6 +89,9 @@
       margin-top: -187px;
       padding-top: 187px;
     }
+    &::-webkit-scrollbar {
+      display: none;
+    }
   }
 
   .column {
