--- a/src/internal-packages/indexes/styles/index.less
+++ b/src/internal-packages/indexes/styles/index.less
@@ -20,6 +20,14 @@
 
 .index-container {
 
+  .column-container {
+    .column.main {
+      &::-webkit-scrollbar {
+        display: none;
+      }
+    }
+  }
+
   .create-index-btn {
     float: left;
     margin: 10px;
